--- a/gnhq.info/web/tpl/fullnoprojectsplit.phtml
+++ b/gnhq.info/web/tpl/fullnoprojectsplit.phtml
@@ -217,5 +217,19 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 	<script type="text/javascript" src="js/decoration.js?<?php echo $JS_SCRIPT_VERSION;?>"></script>
 	<script type="text/javascript" src="js/viol.js?<?php echo $JS_SCRIPT_VERSION;?>"></script>
 	<script type="text/javascript" src="js/statScreen.js?<?php echo $JS_SCRIPT_VERSION;?>"></script>
-</body>
+       <!-- Yandex.Metrika counter -->
+    <div style="display:none;"><script type="text/javascript">
+    (function(w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter11820652 = new Ya.Metrika({id:11820652, enableAll: true, webvisor:true});
+            }
+            catch(e) { }
+        });
+    })(window, "yandex_metrika_callbacks");
+    </script></div>
+    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <noscript><div><img src="//mc.yandex.ru/watch/11820652" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+	</body>
 </html>
