link to sms-cik

--- a/gnhq.info/web/tpl/fullmosobl.phtml
+++ b/gnhq.info/web/tpl/fullmosobl.phtml
@@ -88,7 +88,7 @@ if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE') > 0) {
 			<thead>
 				<tr>
 					<th width="15%"></th>
-					<th width="40%" colspan="2">Выборка</th>
+					<th width="40%" colspan="2">Выборка <a target="blank" href="http://sms-cik.org/">http://sms-cik.org/</a></th>
 					<th width="40%" colspan="2">ЦИК</th>
 					<th width="5%">Разница</th>
 				</tr>
